fix ar gaps

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -351,12 +351,12 @@ body[dir="rtl"]{
 }
 
 
-@media (max-width: 365px){
+@media (max-width: 380px){
     .top-page-info-container{
 
         height: 35px;
         padding: 0px 5px;
-        
+        g
         .icon{
             font-size: 9px;
         }
